--- a/OrderBot/OrderBot.csproj
+++ b/OrderBot/OrderBot.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+    <_Parameter1>OrderBot.Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>  
 </Project>
